kustomize-units/validating-admission-policies/disallow-latest-and-main-tag.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: disallow-latest-and-main-tag
  annotations:
    policies/title: Disallow Latest and Main Tag
    policies/category: Best Practices
    policies/severity: medium
    policies/subject: Pod
    policies/description: >-
      The ':latest' and ':main' tags are mutable and can lead to unexpected errors if the
      image changes. A best practice is to use an immutable tag that maps to
      a specific version of an application Pod. This policy validates that the image
      specifies a tag and that it is not called `latest` or 'main'.
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: Equivalent
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods", "pods/ephemeralcontainers"]
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments", "daemonsets", "replicasets", "statefulsets"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["jobs", "cronjobs"]
  variables:
  - name: objectSpec
    expression: "object.spec"
  validations:
    - message: "An image tag is required.Using a mutable image tag e.g. 'latest' is not allowed."
      expression: >-
          (
              (has(variables.objectSpec.containers) ? variables.objectSpec.containers : []) +
              (has(variables.objectSpec.initContainers) ? variables.objectSpec.initContainers : []) +
              (has(variables.objectSpec.ephemeralContainers) ? variables.objectSpec.ephemeralContainers : []) +
              (has(variables.objectSpec.template) && has(variables.objectSpec.template.spec.containers) ? variables.objectSpec.template.spec.containers : []) +
              (has(variables.objectSpec.template) && has(variables.objectSpec.template.spec.initContainers) ? variables.objectSpec.template.spec.initContainers : []) +
              (has(variables.objectSpec.template) && has(variables.objectSpec.template.spec.ephemeralContainers) ? variables.objectSpec.template.spec.ephemeralContainers : []) +
              (has(variables.objectSpec.jobTemplate) && has(variables.objectSpec.jobTemplate.spec.template) &&
               has(variables.objectSpec.jobTemplate.spec.template.spec.containers) ? variables.objectSpec.jobTemplate.spec.template.spec.containers : []) +
              (has(variables.objectSpec.jobTemplate) && has(variables.objectSpec.jobTemplate.spec.template) &&
               has(variables.objectSpec.jobTemplate.spec.template.spec.initContainers) ? variables.objectSpec.jobTemplate.spec.template.spec.initContainers : []) +
              (has(variables.objectSpec.jobTemplate) && has(variables.objectSpec.jobTemplate.spec.template) &&
               has(variables.objectSpec.jobTemplate.spec.template.spec.ephemeralContainers) ? variables.objectSpec.jobTemplate.spec.template.spec.ephemeralContainers : [])
          ).all(container,
              container.image.contains(':') &&
              !(container.image.endsWith(':latest')) &&
              !(container.image.endsWith(':main'))
          )
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: disallow-latest-and-main-tag
spec:
  policyName: disallow-latest-and-main-tag
  validationActions: [Deny]
  matchResources:
    objectSelector:
      matchExpressions:
      - key: app
        operator: NotIn
        values:
        - neuvector-scanner-pod
        - neuvector-updater-pod
      - key: validating-policy.sylva.io/exclude-latest-tag
        operator: NotIn
        values:
        - excluded
